# llm_benchmarks

./: files.txt  llm_comparison.json  main.py  pyproject.toml  topic_generation_model.py
inputs/01909c2e3abb4dd9f5efd1c71dff1a10/: moment-detection-2.0.2.json  voice-scene-detection-2.8.0.json  voice-shot-detection-2.0.0.json  whisper-3.6.0.json
inputs/01909c3164de3bb915f348265d5f8560/: moment-detection-2.0.2.json  voice-scene-detection-2.8.0.json  voice-shot-detection-2.0.0.json  whisper-3.6.0.json
inputs/01909c329bd670d5015313dc470218f2/: moment-detection-2.0.2.json  voice-scene-detection-2.8.0.json  voice-shot-detection-2.0.0.json  whisper-3.6.0.json
inputs/01909c6d3f89ff8a0a66f78f5dea5566/: moment-detection-2.0.2.json  voice-scene-detection-2.8.0.json  voice-shot-detection-2.0.0.json  whisper-3.6.0.json
